  - #2299 #2308 authMode setting added
  - #2299 #2408 #2463 added authMode: basic, form, basic+form, basic+oidc, headerOnly, header+digest (same as header), header+basic
  - #2387 notifiers for parliament and arkime merged conflicts mitigated by appending "Parliament" to parliament notifiers
  - #2396 drop privileges is now AFTER http(s) list
## Capture
  - #2295 moloch converted to arkime
  - #2312 override ips can now set any field
  - #2312 overrideIpsFiles setting
  - #2314 packetDropIpsFiles setting
  - #2390 can have negative cert.validDays/cert.remainingDays (thanks @mcgillowen)
  - #2390 added cert.remainingSeconds/cert.remainingSeconds (thanks @mcgillowen)
  - #2390 cert.remainingDays is now based on the firstPacket of session instead of current time (thanks @mcgillowen)
  - #2409 JA4 support
  - #2409 JA3/JA4 support for smtp STARTTLS
  - #2297 always build zstd (except arch)
## Cont3xt
  - #2121 new bulk UI and support for bulk queries
  - #2271 lots of keyboard shortcut improvements
  - #2383 new array syntax for links substitution
  - #2382 new OpenSearch/Elasticsearch integration (config file only)
  - #2441 new csv/json file/url/redis integration (config file only)
  - #2385 new viewRoles in config file per integration to control access
  - #2407 transfer ownership of resources
  - #2437 new csv/json data source supports
  - #2441 new redis data source support
  - #2507 demoMode added
## ESProxy
  - #2483 #2484 support field updates/deletes
## Viewer
  - #2296 removed x-moloch-auth
  - #2392 files/history/stats now have cluster dropdown for multiviewer
  - #2402 http.request.FIELD and http.response.FIELD supported
  - #2404 add editor for resources
  - #2407 transfer ownership of resources
  - #2482 added uploadRoles to control who can upload
  - #2501 add defaultTimeRange setting
## Parliament
  - #2377 dashboard-only mode removed, if you want users to just see the dashboard don't assign them the parliamentUser role