@@ -97,6 +97,7 @@ arkimeWebURL = localhost:8123/arkime/
 turnOffGraphDays = 30
 disableUserPasswordUI=false
 authMode=digest
+loginMessage=Welcome! Test form auth...
 defaultTimeRange=-1
 
 [testmulties]
